tests/semantic_cases/invalid/writestring_too_many_args.ob0
MODULE Main;
BEGIN
  WriteString("Hello", "World")
END Main.
